태그 지정정

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,3 @@
-<!-- 모든 레이아웃에 동일하게 적용될 _layouts/default.html -->
 <!DOCTYPE html>
 <html>
   <head>
@@ -43,7 +42,7 @@
       <div class="tag_list">
         <ul id="tag-list">
           <li>
-            <a href="/"><img src="/assets/img/disk.png" />(C:)</a>
+            <a href="/"><img src="/assets/img/disk.png" />NO NAME [NTFS]</a>
             <ul>
               {% assign tags = site.tags | sort %} {% for tag in tags %}
               <li>
