--- a/_includes/topbar.html
+++ b/_includes/topbar.html
@@ -1,3 +1,7 @@
+<script
+  src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"
+  type="text/javascript"
+></script>
 <ul class="topbar">
   <a href="/me"
     ><li><u>A</u>bout</li></a
