--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,6 +27,10 @@
     <script>
       hljs.initHighlightingOnLoad();
     </script>
+    <script
+      src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"
+      type="text/javascript"
+    ></script>
   </head>
   <body>
     <div class="wrapper">
@@ -124,7 +128,14 @@
         {% else %}
         <div class="left">{{ site.posts | size }} object(s)</div>
         {% endif %}
-        <div class="right">&nbsp;</div>
+        <div class="right">
+          Code licensed under
+          <a
+            href="https://github.com/h01000110/h01000110.github.io/blob/master/LICENSE"
+            target="_blank"
+            >MIT License</a
+          >
+        </div>
       </div>
     </div>
 
@@ -140,15 +151,6 @@
     <script src="/assets/js/001.js"></script>
     <script src="/assets/js/002.js"></script>
     <script src="/assets/js/windows.js"></script>
-    <div class="footer">
-      <p>
-        Code licensed under
-        <a
-          href="https://github.com/h01000110/h01000110.github.io/blob/master/LICENSE"
-          target="_blank"
-          >MIT License</a
-        >
-      </p>
-    </div>
+    <div class="footer"></div>
   </body>
 </html>
