--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -1,9 +1,11 @@
+// 기본 스타일
 body {
   background: #008082;
   font-family: sans-serif, serif, monospace;
   font-size: 13px;
 }
 
+// 래퍼 및 콘텐츠 영역
 .wrapper,
 .content {
   width: 800px;
@@ -14,6 +16,8 @@ body {
   border-color: #fff8ff #000000 #000000 #fff8ff;
   padding: 2px 0;
 }
+
+// 타이틀 스타일 (기본 및 포스트)
 .default_title,
 .post_title {
   padding: 2px 4px 3px 4px;
@@ -32,7 +36,11 @@ body {
     margin: 0 3px 0 0;
   }
 }
+
+// 포스트 타이틀 추가 스타일
 .post_title {
+  background: linear-gradient(to right, #000080, #1084d0);
+
   h1 {
     display: inline-block;
   }
@@ -41,6 +49,7 @@ body {
     color: #000000;
   }
 
+  // 버튼 스타일
   .btn {
     background: #cccccc;
     width: 13px;
@@ -56,26 +65,24 @@ body {
       top: -2px;
     }
 
-    .fa-window-minimize {
+    .fa-window-minimize,
+    .fa-window-maximize {
       font-size: 10px;
       left: 1px;
     }
 
-    .fa-window-maximize {
-      font-size: 10px;
-      left: 1px;
+    &:active {
+      width: 12px;
+      height: 10px;
     }
   }
 
   .btn_max {
     margin: 0 3px 0 0;
   }
-
-  .btn:active {
-    width: 12px;
-    height: 10px;
-  }
 }
+
+// 상단 메뉴바
 ul.topbar {
   list-style: none;
   padding: 0 10px;
@@ -85,11 +92,14 @@ ul.topbar {
     display: inline-block;
     margin: 0 5px 0 0;
   }
+
   a {
     text-decoration: none;
     color: #000000;
   }
 }
+
+// 공통 리스트 스타일
 .post_list,
 .tag_list,
 .post_content {
@@ -98,11 +108,13 @@ ul.topbar {
   border-style: ridge groove groove ridge;
   border-color: #7f787f #fff8ff #fff8ff #7f787f;
 }
+
+// 포스트 리스트
 .post_list {
   width: 70.2%;
   margin: 0 auto;
-  min-height: 150px;
-  max-height: 150px;
+  min-height: 80vh;
+  max-height: 80vh;
   overflow-y: scroll;
   display: inline-block;
 
@@ -131,11 +143,13 @@ ul.topbar {
     }
   }
 }
+
+// 태그 리스트
 .tag_list {
   width: 28%;
   margin: 0 auto;
-  min-height: 150px;
-  max-height: 150px;
+  min-height: 80vh;
+  max-height: 80vh;
   overflow-y: scroll;
   display: inline-block;
 
@@ -150,31 +164,37 @@ ul.topbar {
     color: #000000;
   }
 
-  ul {
-    li {
-      max-width: 27ch;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap;
+  ul li {
+    max-width: 27ch;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+}
+
+// 태그 리스트 스타일
+#tag-list {
+  background: transparent url(/assets/img/pixel-alt.png) repeat-y 15px 0;
+
+  li {
+    padding: 0 0 0 2px;
+
+    a {
+      background: #fff8ff;
+      display: block;
+    }
+
+    ul li {
+      background: transparent url(/assets/img/pixel-alt.png) repeat-x 0 8px;
+      margin: 4px 0 4px 13px;
+      padding: 0 0 0 20px;
     }
   }
 }
-#tag-list {
-  background: transparent url(/assets/img/pixel-alt.png) repeat-y 15px 0;
-}
-#tag-list li {
-  padding: 0 0 0 2px;
-}
-#tag-list li a {
-  background: #fff8ff;
-  display: block;
-}
-#tag-list li ul li {
-  background: transparent url(/assets/img/pixel-alt.png) repeat-x 0 8px;
-  margin: 4px 0 4px 13px;
-  padding: 0 0 0 20px;
-}
+
+// 포스트 총계 영역
 .post_total {
+  display: flex;
   .left,
   .right {
     border: 1px solid;
@@ -182,15 +202,19 @@ ul.topbar {
     display: inline-block;
     padding: 1px 3px;
   }
+
   .left {
     width: 33%;
     margin-left: 2px;
   }
+
   .right {
     width: 64%;
     margin-right: 2px;
   }
 }
+
+// 포스트 콘텐츠 영역
 .post_content {
   position: relative;
   width: 98.5%;
@@ -242,6 +266,7 @@ ul.topbar {
     border-left: 0;
   }
 
+  // 목록 스타일
   ul {
     list-style: square;
     margin: 0 0 15px 30px;
@@ -287,9 +312,13 @@ ul.topbar {
     margin-bottom: 15px;
   }
 }
+
+// 코드 하이라이트
 .hljs {
   background: #fff8ff;
 }
+
+// 푸터
 .footer {
   font-size: 12px;
   margin: 30px 0 10px 0;
@@ -302,6 +331,8 @@ ul.topbar {
     }
   }
 }
+
+// 기부 섹션
 .donate {
   float: right;
   padding: 0 3px 0 0;
@@ -311,105 +342,156 @@ ul.topbar {
     word-break: break-word;
   }
 }
-@media only screen and (max-width: 900px) {
-  .content {
-    width: 90%;
+
+// 마크다운 콘텐츠 스타일
+.markdown-content {
+  display: block;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  line-height: 1.5;
+  padding: 10px;
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    margin-bottom: 10px;
+    font-weight: bold;
+  }
+
+  h1 {
+    font-size: 22px;
+  }
+
+  h2 {
+    font-size: 20px;
+  }
+
+  ul,
+  ol {
+    margin-left: 20px;
+    margin-bottom: 15px;
+  }
+
+  ul {
+    list-style-type: disc;
+  }
+
+  ol {
+    list-style-type: decimal;
+  }
+
+  p {
+    margin-bottom: 15px;
+  }
+
+  a {
+    color: #0000ff;
+    text-decoration: underline;
+  }
+
+  code {
+    background-color: #f0f0f0;
+    padding: 2px 4px;
+    border-radius: 3px;
+    font-family: monospace;
+  }
+
+  pre {
+    background-color: #f0f0f0;
+    padding: 10px;
+    overflow-x: auto;
+    margin-bottom: 15px;
+    font-family: monospace;
   }
 }
-@media only screen and (max-width: 700px) {
-  .content {
-    width: 90%;
+
+// 창 스타일 (윈도우 효과)
+.content {
+  position: absolute;
+  top: 100px;
+  left: 200px;
+  width: 800px;
+  z-index: 10;
+  display: none;
+  background-color: #bfb8bf !important;
+  border: 2px solid !important;
+  border-color: #fff8ff #000000 #000000 #fff8ff !important;
+  padding: 2px 0 !important;
+  box-sizing: border-box;
+  resize: both;
+
+  // 활성화 및 비활성화 창 스타일
+  &.active {
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
+    border-color: #fff8ff #000000 #000000 #fff8ff !important;
   }
-  .post_content {
-    width: 98%;
-  }
-}
-@media only screen and (max-width: 400px) {
-  .post_content {
-    width: 97%;
-  }
-}
-@media only screen and (max-width: 810px) {
-  .wrapper {
-    width: 90%;
-  }
-  .post_total {
-    .left {
-      width: 37%;
+
+  &:not(.active) .post_title {
+    background: linear-gradient(to right, #808080, #a0a0a0) !important;
+
+    h1 {
+      color: #d8d8d8 !important;
     }
-    .right {
-      float: right;
-      width: 60%;
-    }
   }
 }
-@media only screen and (max-width: 750px) {
-  .tag_list {
-    width: 99%;
+
+// 리사이징 핸들 스타일
+.resize-handle {
+  position: absolute;
+  z-index: 100;
+
+  &-e {
+    width: 8px;
+    height: 100%;
+    top: 0;
+    right: 0;
+    cursor: e-resize;
   }
-  .post_list {
-    width: 99%;
-    float: left;
+
+  &-s {
+    width: 100%;
+    height: 8px;
+    bottom: 0;
+    left: 0;
+    cursor: s-resize;
   }
-  .post_total {
-    .left {
-      width: 36%;
-    }
-    .right {
-      float: right;
-      width: 60%;
-    }
-  }
-}
-@media only screen and (max-width: 610px) {
-  .tag_list {
-    width: 98.7%;
-  }
-  .post_list {
-    width: 98.7%;
-    float: left;
-  }
-  .post_total {
-    .left {
-      width: 35.7%;
-    }
-  }
-}
-@media only screen and (max-width: 520px) {
-  .post_total {
-    .left {
-      width: 34.5%;
-    }
+
+  &-se {
+    width: 15px;
+    height: 15px;
+    bottom: 0;
+    right: 0;
+    cursor: se-resize;
+    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="6" height="6" viewBox="0 0 6 6"><path d="M4,4 L4,6 L6,6 L6,4 Z M1,4 L1,6 L3,6 L3,4 Z M4,1 L4,3 L6,3 L6,1 Z" fill="%23808080" /></svg>');
+    background-position: right bottom;
+    background-repeat: no-repeat;
   }
 }
-@media only screen and (max-width: 410px) {
-  .post_total {
-    .left {
-      width: 34%;
-    }
-  }
+
+// 숨겨진 포스트 콘텐츠
+.hidden-post-content {
+  display: none !important;
 }
-@media only screen and (max-width: 375px) {
-  .post_total {
-    .left {
-      width: 33%;
-    }
-  }
-}
+
+// 스크롤바 스타일
 ::-webkit-scrollbar {
   width: 16px;
-} /* this targets the default scrollbar (compulsory) */
+}
+
 ::-webkit-scrollbar-track {
   background-image: url("/assets/img/track.png");
   background-repeat: repeat-x repeat-y;
-} /* the new scrollbar will have a flat appearance with the set background color */
+}
 
 ::-webkit-scrollbar-thumb {
   background-color: #cccccc;
   border-width: 2px;
   border-style: groove ridge ridge groove;
   border-color: #fff8ff #000000 #000000 #fff8ff;
-} /* this will style the thumb, ignoring the track */
+}
 
 ::-webkit-scrollbar-button {
   background-color: #cccccc;
@@ -438,180 +520,134 @@ ul.topbar {
   &:active {
     background-position: 1px 2px;
   }
-} /* optionally, you can style the top and the bottom buttons (left and right for horizontal bars) */
+}
 
 ::-webkit-scrollbar-corner {
   background-color: #cacaca;
-} /* if both the vertical and the horizontal bars appear, then perhaps the right bottom corner also needs to be styled */
-/* windows.css - 다중 창을 위한 스타일 */
-
-/* windows.css - 다중 창을 위한 스타일 */
-
-/* windows.css - 다중 창을 위한 스타일 */
-
-/* 창 기본 스타일 */
-.content {
-  position: absolute;
-  top: 100px;
-  left: 200px;
-  width: 800px;
-  z-index: 10;
-  display: none;
-  background-color: #bfb8bf !important;
-  border: 2px solid !important;
-  border-color: #fff8ff #000000 #000000 #fff8ff !important;
-  padding: 2px 0 !important;
-  box-sizing: border-box;
-  resize: both; /* 기본 리사이징도 추가 (일부 브라우저 지원) */
 }
 
-/* 제목 표시줄 스타일 */
-.content .post_title {
-  background: linear-gradient(to right, #000080, #1084d0) !important;
-  cursor: move;
-  user-select: none;
-  padding: 2px 4px 3px 4px !important;
-  position: relative;
-}
-
-.content .post_title h1 {
-  color: #bfb8bf !important;
-  font-size: 14px !important;
-  font-weight: bold !important;
-  display: inline-block !important;
-}
-
-.content .post_title img {
-  float: left !important;
-  width: 14px !important;
-  height: 14px !important;
-  margin: 0 3px 0 0 !important;
-}
-
-/* 버튼 스타일 */
-.content .post_title .btn {
-  background: #cccccc !important;
-  width: 13px !important;
-  height: 11px !important;
-  float: right !important;
-  border: 2px solid !important;
-  border-color: #fff8ff #000000 #000000 #fff8ff !important;
-}
-
-.content .post_title .btn span {
-  font-size: 11px !important;
-  position: relative !important;
-  left: 2px !important;
-  top: -2px !important;
-}
-
-.content .post_title .btn_max {
-  margin: 0 3px 0 0 !important;
-}
-
-.content .post_title .btn:active {
-  width: 12px !important;
-  height: 10px !important;
-}
-
-.content .post_title .fa-window-minimize,
-.content .post_title .fa-window-maximize {
-  font-size: 10px !important;
-  left: 1px !important;
-}
-
-/* 활성화 및 비활성화 창 스타일 */
-.content.active {
-  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
-  border-color: #fff8ff #000000 #000000 #fff8ff !important;
-}
-
-/* CSS로 비활성화 창 스타일 적용 (선택적으로 사용 가능) */
-.content:not(.active) .post_title {
-  background: linear-gradient(to right, #808080, #a0a0a0) !important;
-}
-
-.content:not(.active) .post_title h1 {
-  color: #d8d8d8 !important;
-}
-
-/* 포스트 내용 영역 스타일 */
-.content .post_content {
-  background: #fff8ff !important;
-  border-width: 2px !important;
-  border-style: ridge groove groove ridge !important;
-  border-color: #7f787f #fff8ff #fff8ff #7f787f !important;
-  overflow-y: auto !important;
-  overflow-x: auto !important;
-  max-height: 70vh !important;
-  width: 98.5% !important;
-  margin: 0 auto !important;
-}
-
-/* topbar 스타일 */
-.content .topbar {
-  list-style: none !important;
-  padding: 0 10px !important;
-  margin: 3px 0 3px 0 !important;
-}
-
-.content .topbar li {
-  display: inline-block !important;
-  margin: 0 5px 0 0 !important;
-}
-
-/* 리사이징 핸들 스타일 */
-.resize-handle {
-  position: absolute;
-  z-index: 100;
-}
-
-.resize-handle-e {
-  width: 8px;
-  height: 100%;
-  top: 0;
-  right: 0;
-  cursor: e-resize;
-}
-
-.resize-handle-s {
-  width: 100%;
-  height: 8px;
-  bottom: 0;
-  left: 0;
-  cursor: s-resize;
-}
-
-.resize-handle-se {
-  width: 15px;
-  height: 15px;
-  bottom: 0;
-  right: 0;
-  cursor: se-resize;
-  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="6" height="6" viewBox="0 0 6 6"><path d="M4,4 L4,6 L6,6 L6,4 Z M1,4 L1,6 L3,6 L3,4 Z M4,1 L4,3 L6,3 L6,1 Z" fill="%23808080" /></svg>');
-  background-position: right bottom;
-  background-repeat: no-repeat;
-}
-
-/* hidden-post-content 클래스는 화면에 표시되지 않음 */
-.hidden-post-content {
-  display: none !important;
-}
-/* 모바일 화면에서 창 스타일 조정 */
-@media only screen and (max-width: 768px) {
+// 반응형 디자인
+@media only screen and (max-width: 900px) {
   .content {
-    position: relative !important; /* absolute에서 relative로 변경 */
-    top: auto !important;
-    left: auto !important;
-    width: 95% !important; /* 화면 너비 거의 전체 사용 */
-    margin: 10px auto !important; /* 상하 마진 추가 및 중앙 정렬 */
-    display: block !important; /* 항상 보이게 설정 */
-    height: auto !important; /* 자동 높이 설정 */
-    overflow: visible !important;
-    z-index: 1 !important; /* z-index 재설정 */
+    width: 90%;
+  }
+}
+
+@media only screen and (max-width: 810px) {
+  .wrapper {
+    width: 90%;
   }
 
-  /* 모바일에서는 포스트 내용 스크롤 대신 자연스럽게 늘어나도록 */
+  .post_total {
+    .left {
+      width: 37%;
+    }
+
+    .right {
+      float: right;
+      width: 60%;
+    }
+  }
+}
+
+@media only screen and (max-width: 750px) {
+  .tag_list {
+    width: 99%;
+    min-height: 150px;
+    max-height: 150px;
+  }
+
+  .post_list {
+    width: 99%;
+    float: left;
+    // min-height: 150px;
+    // max-height: 150px;
+  }
+
+  .post_total {
+    display: block;
+    .left {
+      width: 36%;
+    }
+
+    .right {
+      float: right;
+      width: 60%;
+    }
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  .content {
+    width: 90%;
+  }
+
+  .post_content {
+    width: 98%;
+  }
+}
+
+@media only screen and (max-width: 610px) {
+  .tag_list {
+    width: 98.7%;
+  }
+
+  .post_list {
+    width: 98.7%;
+    float: left;
+  }
+
+  .post_total {
+    .left {
+      width: 35.7%;
+    }
+  }
+}
+
+@media only screen and (max-width: 520px) {
+  .post_total {
+    .left {
+      width: 34.5%;
+    }
+  }
+}
+
+@media only screen and (max-width: 410px) {
+  .post_total {
+    .left {
+      width: 34%;
+    }
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .post_content {
+    width: 97%;
+  }
+}
+
+@media only screen and (max-width: 375px) {
+  .post_total {
+    .left {
+      width: 33%;
+    }
+  }
+}
+
+// 모바일 최적화
+@media only screen and (max-width: 768px) {
+  .content {
+    position: relative !important;
+    top: auto !important;
+    left: auto !important;
+    width: 95% !important;
+    margin: 10px auto !important;
+    display: block !important;
+    height: auto !important;
+    overflow: visible !important;
+    z-index: 1 !important;
+  }
+
   .content .post_content {
     max-height: none !important;
     min-height: auto !important;
@@ -620,124 +656,29 @@ ul.topbar {
     overflow-x: visible !important;
   }
 
-  /* 모바일에서 리사이징 핸들 숨기기 */
   .resize-handle {
     display: none !important;
   }
 
-  /* 창 제목 표시줄 스타일 조정 */
   .content .post_title {
-    cursor: default !important; /* 드래그 비활성화 */
+    cursor: default !important;
   }
 
-  /* 포스트 목록 전체 너비 사용 */
-  .post_list,
-  .tag_list {
-    width: 100% !important;
-    display: block !important;
-    float: none !important;
-    margin-bottom: 10px !important;
-  }
-
-  /* 모바일에서 창 포스트가 여러 개 열릴 경우, 닫지 않고 쌓이도록 설정 */
   .content + .content {
-    display: block !important; /* 이전 숨김 설정 제거 */
-    margin-top: 20px !important; /* 창 사이 간격 추가 */
-    border-top: 2px solid #7f787f !important; /* 구분선 추가 */
+    display: block !important;
+    margin-top: 20px !important;
+    border-top: 2px solid #7f787f !important;
   }
 
-  /* 창 사이에 간격 추가 */
   .content {
     margin-bottom: 20px !important;
   }
 
-  /* 메인 콘텐츠와 창이 함께 표시되도록 설정 */
   .content:not(:empty) ~ .wrapper {
-    display: block !important; /* 이전에 숨겼던 설정 제거 */
+    display: block !important;
     margin-top: 20px !important;
   }
 
-  /* '목록으로 돌아가기' 버튼 제거 */
-  .content:before {
-    content: none !important;
-  }
-}
-
-/* 태블릿 크기 화면에서 약간의 조정 */
-@media only screen and (min-width: 769px) and (max-width: 1024px) {
-  .content {
-    width: 90% !important;
-    max-width: 700px !important;
-  }
-}
-
-/* 마크다운 콘텐츠에 대한 스타일 */
-.markdown-content {
-  display: block;
-  word-wrap: break-word;
-  overflow-wrap: break-word;
-  line-height: 1.5;
-  padding: 10px;
-}
-
-.markdown-content h1,
-.markdown-content h2,
-.markdown-content h3,
-.markdown-content h4,
-.markdown-content h5,
-.markdown-content h6 {
-  margin-bottom: 10px;
-  font-weight: bold;
-}
-
-.markdown-content h1 {
-  font-size: 22px;
-}
-
-.markdown-content h2 {
-  font-size: 20px;
-}
-
-.markdown-content ul,
-.markdown-content ol {
-  margin-left: 20px;
-  margin-bottom: 15px;
-}
-
-.markdown-content ul {
-  list-style-type: disc;
-}
-
-.markdown-content ol {
-  list-style-type: decimal;
-}
-
-.markdown-content p {
-  margin-bottom: 15px;
-}
-
-.markdown-content a {
-  color: #0000ff;
-  text-decoration: underline;
-}
-
-.markdown-content code {
-  background-color: #f0f0f0;
-  padding: 2px 4px;
-  border-radius: 3px;
-  font-family: monospace;
-}
-
-.markdown-content pre {
-  background-color: #f0f0f0;
-  padding: 10px;
-  overflow-x: auto;
-  margin-bottom: 15px;
-  font-family: monospace;
-}
-
-/* 모바일에서 마크다운 콘텐츠 스타일 조정 */
-@media only screen and (max-width: 768px) {
   .markdown-content {
     padding: 5px;
   }
@@ -748,5 +689,13 @@ ul.topbar {
 
   .markdown-content h2 {
     font-size: 18px;
+  }
+}
+
+// 태블릿 화면 최적화
+@media only screen and (min-width: 769px) and (max-width: 1024px) {
+  .content {
+    width: 90% !important;
+    max-width: 700px !important;
   }
 }
