--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -220,7 +220,7 @@ ul.topbar {
   width: 98.5%;
   min-height: 600px;
   max-height: 600px;
-  padding: 2px;
+  padding-left: 6px !important;
   margin: 0 auto;
   overflow-y: scroll;
   overflow-x: scroll;
@@ -238,7 +238,7 @@ ul.topbar {
   h1 {
     font-size: 20px;
     font-weight: 700;
-    margin: 50px 0 10px 0;
+    margin: 10px 0 10px 0;
   }
 
   h2 {
